# Robotic-arm-micro-ROS

./: README.md
Docs/: Activity.md  Ignition_intro.md  Micro_ros.md  ignition_plugin.md  ignition_ros.md  ignition_urdf.md
ignition_plugin/: CMakeLists.txt  HelloWorld.cc  HelloWorld.hh  hello_world_plugin.sdf
robot_arm_base/: CMakeLists.txt  package.xml  robot_arm_hw.xml
robot_arm_base/include/robot_arm_base/: robot_arm_interface.h
robot_arm_base/src/: CMakeLists.txt  robot_arm_interface.cpp
robot_arm_control/: CMakeLists.txt  package.xml
robot_arm_control/config/: example.yaml  robot_controllers.yaml
robot_arm_control/launch/: robot_control.launch.py  test_trayectory.launch.py
robot_arm_description/: CMakeLists.txt  package.xml
robot_arm_description/launch/: display.launch.py
robot_arm_description/urdf/: robot_arm.urdf.xacro  robot_arm_controller.xacro
robot_platformio/: platformio.ini
robot_platformio/src/: constants.h  encoder_driver.cpp  encoder_driver.h  hw.h  main.cpp  motor_driver.cpp  motor_driver.h  pid.cpp  pid.h
